[package]
name = "wolf_interface"
version = "0.1.0"
authors = ["4dplanner <3combined@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wolf_serialise_derive.path = "../wolf_serialise_derive"
wolf_serialise.path = "../wolf_serialise"
wolf_hash_map.path = "../wolf_hash_map"
coords.path = "../coords"
