[lib]
proc_macro = true
[package]
name = "wolf_serialise_derive"
version = "0.1.0"
authors = ["4dplanner <3combined@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn =  {version="*",features=["full"]}
quote = "*"
proc-macro2 = "*"
