[lib]
proc-macro = true
[package]
name = "signal_listener_macro"
version = "0.1.0"
authors = ["4dplanner <3combined@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn={version = "*", features=["full", "extra-traits"]}
quote="*"
proc-macro2 = "*"
