[package]
name = "test_server"
version = "0.1.0"
authors = ["4dplanner <3combined@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
game = {path = "../game", features=["timing"]}
# game = {path = "../game", features=[]}
wolf_interface = {path = "../../ted_interface/wolf_interface"}
